# chatgpt-prompt-eng

./: .gitignore  Chatbot.ipynb  Expanding.ipynb  Guidelines.ipynb  Inferring.ipynb  Iterative.ipynb  README.md  Summarizing.ipynb  Transforming.ipynb  promptying.py  pyproject.toml
