[tool.poetry]
name = "chatgpt-prompt-eng"
version = "0.1.0"
description = "ChatGPT tutorial: Prompt Engineering for Developers"
authors = ["Farzad FARID <farzy@farzy.org>"]
readme = "README.md"
packages = [{include = "chatgpt_prompt_eng"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
