[tool.poetry]
name = "chatgpt-prompt-eng"
version = "0.1.0"
description = "ChatGPT tutorial: Prompt Engineering for Developers"
authors = ["Farzad FARID <farzy@farzy.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
redlines = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
